# example_pkg

./: LICENSE  setup.cfg
src/example_package/: example.py
src/example_pkg_redadmiral.egg-info/: PKG-INFO  SOURCES.txt
